force-app/main/default/objects/Grupo_Estudiantes__c/Grupo_Estudiantes__c.object-meta.xml
<CustomObject>
    <label>Grupo</label>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>Grupo Estudiantes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grupos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>