force-app/main/default/objects/Grupo_Estudiantes__c/fields/Calificacion__c.field-meta.xml
<CustomField>
    <fullName>Calificacion__c</fullName>
    <label>Calificacion</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>