force-app/main/default/objects/Grupo_Estudiantes__c/fields/Estudiante__c.field-meta.xml
<CustomField>
    <fullName>Estudiante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estudiante</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Grupos</relationshipLabel>
    <relationshipName>Grupos</relationshipName>
    <type>Lookup</type>
</CustomField>