force-app/main/default/objects/Grupo_Estudiantes__c/fields/Materia__c.field-meta.xml
<CustomField>
    <fullName>Materia__c</fullName>
    <label>Materia</label>
    <referenceTo>Materia__c</referenceTo>
    <relationshipLabel>Grupos</relationshipLabel>
    <relationshipName>Grupos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>