force-app/main/default/objects/Grupo_Estudiantes__c/listViews/Lista_bonita.listView-meta.xml
<ListView>
    <fullName>Lista_bonita</fullName>
    <columns>NAME</columns>
    <columns>Materia__c</columns>
    <filterScope>Mine</filterScope>
    <label>Lista bonita</label>
</ListView>